Fix for logging wrapper collapsed.

--- a/css/wetkit_bootstrap.styles.css
+++ b/css/wetkit_bootstrap.styles.css
@@ -305,6 +305,10 @@ ul.pagination > li > a.progress-disabled {
   float: left;
 }
 
+#edit-log-wrapper {
+  height: inherit;
+}
+
 /* =============================================================================
    WxT
    ========================================================================== */
