--- a/sass/components/system/_system.scss
+++ b/sass/components/system/_system.scss
@@ -36,3 +36,7 @@ p:last-child {
 ul.pagination >li>a.progress-disabled {
   float:left
 }
+
+#edit-log-wrapper {
+  height: inherit;
+}
